# laugh

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Example/: Ask.cpp  Become.cpp  Pingpong.cpp
Include/: Actor.hpp  Actor.inl
Include/Laugh/: Actor.hpp  Actor.inl
Source/: Actor.cpp
